Updated Blueprints: Now you can transport between all levels! Get into the trigger box and press Interact key (C) to transport.
Trigger's locations: EmbarkationRoom (small mirror on the wall) - Main level (Big house's kitchen, east door) - Cellar (opening on the floor) - (ladder) Bunker. The Bunker's door can't be opened now.

BP class 'GameInstances' is used to store shared variables among all levels. Related BP and variables includes: Level BPs in each level, BP class 'LevelTriggerBox', 'GameInstances'.

Bug: Sometimes the character will face wrong direction after spawning

Related Sources:

https://answers.unrealengine.com/questions/91531/how-to-use-the-gameinstance-bp-to-send-info-to-oth.html

https://answers.unrealengine.com/questions/98622/game-instance-cast-fails.html

https://forums.unrealengine.com/showthread.php?2107-Come-Learn-Blueprint-Multiplayer-with-me!-(aka-Tom-s-a-Glutton-for-Punishment)&p=12895&viewfull=1

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/FirstPersonBP/Blueprints/GameInstances.GameInstances_C
 GameDefaultMap=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/FirstPersonBP/Blueprints/FirstPersonGameMode.FirstPersonGameMode_C
@@ -31,5 +31,4 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [URL]
 GameName=SCP093_BACKUP
-
 
