--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -50,6 +50,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Inventory",Key=I,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Grab",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Interact",Key=C,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WeaponAxe",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
 +AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
