Added wall decal (this contains a project settings change to allow for the proper rendering of the decals)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,3 +32,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [URL]
 GameName=SCP093_BACKUP
 
+[/Script/Engine.RendererSettings]
+r.DBuffer=True
+r.EarlyZPass=2
+r.EarlyZPassMovable=True
+
